<resources>
    <string name="app_name" translatable="false">Globo Challenge</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="login">LOGIN</string>
    <string name="enter">ENTER</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="user_already_registered">User already registered!</string>
    <string name="fill_field">Fill the field.</string>
    <string name="pass_not_matching">Passwords do not match.</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="unable_to_auth">Unable to authenticate.</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="no_favorites">You have no favorites yet. \n Add them by touching the stars on the movies list.</string>
    <string name="no_movies">No movies found.</string>
    <string name="hello_user">Olá, </string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
</resources>