<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@null"
            android:src="@drawable/play_icon"
            app:layout_constraintBottom_toTopOf="@id/loginLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="70dp"/>

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="60dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:autofillHints="false"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/user"
                android:inputType="text"
                android:textSize="18sp"
                android:background="@drawable/background_edit_text"
                android:textColorHint="@color/white"
                android:padding="12dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:autofillHints="false"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:background="@drawable/background_edit_text"
                android:textColorHint="@color/white"
                android:padding="12dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/loginLinearLayout"
            app:layout_constraintStart_toStartOf="@id/loginLinearLayout"
            app:layout_constraintEnd_toEndOf="@id/loginLinearLayout"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/notRegisteredTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_light"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_extra_bold"
            app:layout_constraintTop_toBottomOf="@id/notRegisteredTextView"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>